# bonney_et-al_2024_jgrml

./: LICENSE  README.md  pyproject.toml
repo_data/: REPLACEME.md
toolkit/: __init__.py
toolkit/data/: data.py
toolkit/emulator/: dataset.py  models.py  processing.py  trainer.py
toolkit/graphics/: __init__.py  model.py  palette.py  streamflow.py
toolkit/utils/: io.py
toolkit/wrap/: io.py  streamflow.py  wrapdata.py  wrapdriver.py  wraputils.py
workflow/II_Machine_Learning/: 1_optimize_model.py
workflow/I_Dataset_Generation/: 2_simulate_water_shortages.py
workflow/workflow/: script_params.md
workflow/workflow/III_Results/: 1_plot_datasets.py  2_plot_metadata.py  3_plot_flowchart_components.py  4_plot_results.py
workflow/workflow/II_Machine_Learning/: 2_train_model.py  3_generate_predictions.py
workflow/workflow/I_Dataset_Generation/: 1_generate_synthetic_streamflows.py  3_process_datasets_for_ml.py
